Correción comandos GIT

--- a/pruebagit/index.html
+++ b/pruebagit/index.html
@@ -123,10 +123,12 @@ Este comando solo lo tenemos que ejecutar una sola vez para cada proyecto que es
 Cuando queramos guardar los cambios con git tenemos que hacer lo siguiente:<br>
 <hr>
 git status
-<hr><br>
+<hr>
+Esto nos mostrará una lista de aquellos archivos que se encuentren en nuestro working directory<br>
+<br>
 El siguiente paso es ejecutar:<br>
 <hr>
-git add .
+git add -A
 <hr>
 Con esto añadiremos todos los archivos que aparecían anteriormente para ser guardados.
 <br><br> Si queremos añadir un archivo o carpeta en concreto lo podemos hacer mediante
