Correciones en comandos GIT + git remote add

--- a/pruebagit/index.html
+++ b/pruebagit/index.html
@@ -157,6 +157,11 @@ Si quires ver los cambios que has realizado desde el último commit lo puedes ha
 <hr>
 git diff
 <hr>
+<br><br>
+Para conectar nuestro proyecto a un repositorio de GitHub lo podremos hacer con:
+<hr>
+git remote add origin [Link del repositorio].git
+<hr>
   	    </div>
   </section>
   <section id="ramas" class="content-section">
@@ -167,7 +172,7 @@ Muy bien, pero antes has dicho que has subido los cambios a una rama, ¿qué es 
 
 Las ramas sirven para llevar un control de cambios independiente en el mismo repositorio, es decir, podemos crear una rama a partir de la rama base, o rama master, con otra serie de cambios, posteriormente podemos subir estos cambios a la rama master haciendo una combinación de ambas ramas:<br>
 <hr>
-git push origin master
+git push -u origin master
 <hr>
 
 En verde, saldrán las líneas que has añadido, y en rojo las que has eliminado desde la última vez.<br><br>
@@ -187,7 +192,7 @@ git merge hotfix
 Este comando mergea los cambios de la rama llamada hotfix a la rama en la que nos encontremos.<br><br>
 Puedes ver en qué rama te encuentras si ejecutas:
 <hr>
-git brach
+git branch
 <hr>
 <br>
 Normalmente las ramas en git se utilizan para asilar funcionalidades, es decir, creamos una rama con el nombre de una funcionalidad, hacemos todos los commits que queramos y al finalizar la funcionalidad hacemos un merge de ramas. Esto permite tener equipos trabajando independientemente a la vez en el mismo proyecto sin pisar funcionalidad, esta estrategia se conoce como git flow.
@@ -214,7 +219,7 @@ Pero, si tenemos cambios sin guardar, tenemos que guardarlos haciendo commit, an
 
 Tras hacer commit de cambios nuevos, podemos subirlos al repositorio remoto:
 <hr>
-git push origin master
+git push -u origin master
 <hr>
 Donde origin es la dirección del repositiorio remoto y master es la rama a la que estamos subiendo los cambios.
 
